--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="ja">
+<!DOCTYPE html><html lang="ja">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Teachable Machine PC風UI</title>
-
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
-
-  <style>
+  <title>Teachable Machine PC風UI</title>  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>  <style>
     /* ===== PC風レイアウト ===== */
     body {
       margin: 0;
@@ -92,54 +86,15 @@
         font-size: 13px;
       }
     }
-      #signal {
-      width: 80px;
-      margin: 10px auto 15px;
-      padding: 10px;
-      background: #111;
-      border-radius: 12px;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
+  </style></head><body>
+  <header>Teachable Machine – PC風UI</header>  <div class="container">
+    <div class="left" id="webcam-container"></div><div class="right">
+  <button onclick="init()">Start</button>
+  <button onclick="switchCamera()">Switch Camera</button>
+  <div id="label-container"></div>
+</div>
 
-    .light {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      background: #333;
-      opacity: 0.3;
-      margin: auto;
-    }
-
-    .red.on { background: red; opacity: 1; }
-    .yellow.on { background: yellow; opacity: 1; }
-    .green.on { background: lime; opacity: 1; }
-
-</style>
-</head>
-
-<body>
-  <header>Teachable Machine – PC風UI</header>
-
-  <div class="container">
-    <div class="left" id="webcam-container"></div>
-
-    <div class="right">
-      <button onclick="init()">Start</button>
-      <button onclick="switchCamera()">Switch Camera</button>
-
-      <div id="signal">
-        <div class="light red"></div>
-        <div class="light yellow"></div>
-        <div class="light green"></div>
-      </div>
-
-      <div id="label-container"></div>
-    </div>
-  </div>
-
-<script>
+  </div><script>
   const URL = "https://teachablemachine.withgoogle.com/models/DisM17N1Q/"; // ★自分のモデルURLに変更
 
   let model, webcam, labelContainer, maxPredictions;
@@ -153,14 +108,9 @@
     maxPredictions = model.getTotalClasses();
 
     webcam = new tmImage.Webcam(640, 480, false); // PCっぽい解像度
-        try {
-      await webcam.setup({
-        facingMode: useFront ? "user" : "environment"
-      });
-    } catch (e) {
-      // フォールバック（端末依存対策）
-      await webcam.setup();
-    }
+    await webcam.setup({
+      facingMode: useFront ? "user" : { exact: "environment" }
+    });
     await webcam.play();
     window.requestAnimationFrame(loop);
 
@@ -185,26 +135,10 @@
 
   async function predict() {
     const prediction = await model.predict(webcam.canvas);
-
-    // いったん全部消灯
-    document.querySelectorAll('.light').forEach(l => l.classList.remove('on'));
-
     for (let i = 0; i < maxPredictions; i++) {
-      const p = prediction[i];
       labelContainer.childNodes[i].innerHTML =
-        p.className + " : " + p.probability.toFixed(2);
-
-      // ★ 70%以上で点灯
-      if (p.probability >= 0.7) {
-        if (p.className.toLowerCase().includes('red'))
-          document.querySelector('.red').classList.add('on');
-        if (p.className.toLowerCase().includes('yellow'))
-          document.querySelector('.yellow').classList.add('on');
-        if (p.className.toLowerCase().includes('green'))
-          document.querySelector('.green').classList.add('on');
-      }
+        prediction[i].className + " : " + prediction[i].probability.toFixed(2);
     }
-  }
   }
 
   async function switchCamera() {
@@ -212,6 +146,5 @@
     if (webcam) webcam.stop();
     await init();
   }
-</script>
-</body>
+</script></body>
 </html>
